--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ a:focus {
     position: relative;
     padding: 20px 0;
     transition: .3s;
-    font-family: emoji;
+    /* font-family: emoji; */
 }
 
 .nav-bar.nav-sticky {
@@ -1758,7 +1758,7 @@ a:focus {
 .footer {
     position: relative;
     margin-top: 45px;
-    padding-top: 180px;
+    padding-top: 30px;
     background: #121518;
     color: #ffffff;
 }
